# aare-submodule

./: .gitignore  .gitmodules  00-NDArray.cpp  04-TH1.cpp  04-TH1.cpp~  CMakeLists.txt  README.md  tiffIO.cpp
scriptsForPlot/: plotSpectrums.cpp  plotSpectrums.cpp~
tiffio/: CMakeLists.txt  CMakeLists.txt~
